--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <hr>
 
     <!-- anchor tag is self closing tag -->
-    <a href="https://www.google.com">Link to a website open in new tab</a> <br> <br>
+    <a href="https://www.google.com" target="_blank">Link to a website open in new tab</a> <br> <br>
 
     <a href="https://www.prepbytes.com">Link to a website open in same tab</a> <br> <br>
 
